--- a/app/elements/docent-list/docent-list.html
+++ b/app/elements/docent-list/docent-list.html
@@ -110,7 +110,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         is: 'docent-list',
         properties: {
           docentList: {
-            type: Array,
+            type: Array
           }
         },
         observers: [
