--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 
 <html lang="">
+
 <head>
   <meta charset="utf-8">
   <meta name="description" content="">
@@ -76,42 +77,31 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <span>Home</span>
           </a>
 
-          <a data-route="u-overview-docent" href="/uappov">
+          <a data-route="u-create-appointment" href="/uappc">
             <iron-icon icon="info"></iron-icon>
             <span>New Appoinment</span>
           </a>
 
 
-          <a data-route="a-add-docent" href="/aaddd">
+          <a data-route="u-overview-appointments" href="/uappov">
             <iron-icon icon="mail"></iron-icon>
-            <span>Dozenten erstellen</span>
+            <span>Appoinment overview
+              <span>
           </a>
 
-          <a data-route="a-manage-docent" href="/amanaged">
+          </hr>
+          </hr>
+          <a data-route="a-manage-profil" href="/amanagep">
             <iron-icon icon="mail"></iron-icon>
-            <span>Dozenten verwalten</span>
+            <span>Profil verwalten
+              <span>
           </a>
-        </hr>
-          <a data-route="a-overview-appointments" href="/aoverviewa">
-            <iron-icon icon="mail"></iron-icon>
-            <span>Sprechzeiten Übersicht</span>
-          </a>
+          <a data-route="a-login" href="/ulogin">
+            <iron-icon icon="exit-to-app"></iron-icon>
+            <span>Login
+              <span>
 
-          <a data-route="a-manage-appointments" href="/amanagea">
-            <iron-icon icon="mail"></iron-icon>
-            <span>Sprechzeiten verwalten<span>
           </a>
-
-</hr>
-        </hr>
-        <a data-route="a-manage-profil" href="/amanagep">
-          <iron-icon icon="mail"></iron-icon>
-          <span>Profil verwalten<span>
-        </a>
-        <a data-route="a-logout"  onClick="javascript:Parse.User.logOut();">
-          <iron-icon icon="exit-to-app"></iron-icon>
-          <span>Logout<span>
-        </a>
 
         </paper-menu>
       </paper-scroll-header-panel>
@@ -126,7 +116,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
           <!-- Toolbar icons -->
           <paper-icon-button icon="refresh" onclick="javascript:location.reload();"></paper-icon-button>
-          <paper-icon-button icon="exit-to-app" onClick="javascript:Parse.User.logOut(); document.location.href = '/';" ></paper-icon-button>
+          <paper-icon-button icon="exit-to-app" onClick="javascript:Parse.User.logOut(); document.location.href = '/';"></paper-icon-button>
 
           <!-- Application name -->
           <div class="middle middle-container center horizontal layout">
@@ -146,30 +136,37 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
             <section data-route="a-home">
 
+              <!-- <h1> Appointment List </h1> -->
+              <!-- <appointment-list-user></appointment-list-user> -->
+            </section>
 
-              <paper-material elevation="1" class="paper-font-body2">
-
-                <h1> Test </h1>
+            <section data-route="u-create-appointment">
+              <template is="dom-if" if="{{isEqual(route, 'u-create-appointment')}}" restamp="true">
                 <docent-list-user></docent-list-user>
-              </hr>
-                <h1> Appointment List </h1>
-                <!-- <appointment-list-user></appointment-list-user> -->
-            </paper-material>
-            </div>
+              </template>
             </section>
-
-            <section data-route="u-overview-appointment">
-
-
-              <paper-material elevation="1" class="paper-font-body2">
-
-
-
-            </paper-material>
-            </div>
+            <section data-route="u-login">
+              <!-- <template is="dom-if" if="{{isEqual(route, 'a-home')}}" restamp="true"> -->
+              <login-element></login-element>
+              <!-- </template> -->
+              <!-- <h1> Appointment List </h1> -->
+              <!-- <appointment-list-user></appointment-list-user> -->
             </section>
+        </div>
 
-          </iron-pages>
+
+        <section data-route="u-overview-appointment">
+
+
+          <paper-material elevation="1" class="paper-font-body2">
+
+
+
+          </paper-material>
+          </div>
+        </section>
+
+        </iron-pages>
         </div>
       </paper-scroll-header-panel>
     </paper-drawer-panel>
@@ -195,7 +192,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
   <!-- build:js scripts/app.js -->
   <script src="scripts/app.js"></script>
-          <script src="scripts/hour.js"></script>
+  <script src="scripts/hour.js"></script>
+  <script type="text/javascript">
+    app.isEqual = function(x, y) {
+      return x === y;
+    };
+  </script>
   <!-- endbuild-->
 </body>
 
