further work on time slot dispay for user

--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -30,7 +30,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     });
 
     page('/uappov', function () {
-      app.route = 'u-overview-appointments';
+      app.route = 'u-appointment-overview';
     });
 
     page('/amanagep', function () {
